# Melvin_Graph

./: .gitignore  ABSTRACTION_PROBLEM.txt  ALGORITHM_SUMMARY.md  AUTO_START_CONFIRMED.txt  BINARY_TO_INTELLIGENCE.md  BUILD_INFO.md  CMakeLists.txt  CODE_SIMPLICITY_ANALYSIS.md  COHERENCE_IS_GENERALIZATION.txt  COMMANDS_TO_RUN_NOW.txt  COMPLETE_TRANSFORMATION_SUMMARY.md  COMPLEXITY_TEST.md  COMPOSITION_IDEA.txt  COMPUTATIONAL_BREAKTHROUGH.md  COMPUTATIONAL_MELVIN.md  COMPUTATIONAL_MELVIN_SUMMARY.md  CONDENSED.md  CONNECT_TO_JETSON.md  CONTINUOUS_DYNAMICS_QUICKSTART.md  CONTINUOUS_DYNAMICS_REFACTOR.md  CURRENT_LIMITS.txt  DEPLOY_CHECKLIST.txt  DISPLAY_ALWAYS_ON.md  DISPLAY_FIXED.md  DISPLAY_FIXED_FINAL.md  DISPLAY_STATUS_AND_FIX.md  DISPLAY_WORKING_NOW.txt  EMERGENCE_README.md  EMERGENT_REASONING_RULES.md  EMERGENT_SPACETIME_THOUGHT.md  EVOLUTION_SUMMARY.txt  EXECUTABLE_NODES_EXPLAINED.txt  FINAL_DISPLAY_STATUS.txt  FINAL_RESULTS.md  FIX_DISPLAY_NOW.md  FUNDAMENTAL_QUESTION.txt  FUNDAMENTAL_QUESTIONS.md  GRAPH_LIMITS.md  GRAPH_MIGRATION_AUDIT.md  HOMEOSTATIC_SELF_TUNING.md  (+265 more)
.cursor/plans/: graph-brain-0cb4e68b.plan.md
jetson_deploy/: can_monitor.h  log_monitor.c  melvind.conf  net_monitor.c  net_monitor.h  proc_monitor.c  proc_monitor.h  shm_reader.c  sys_monitor.h
